@@ -1,11 +1,11 @@
-package net.zoofantastique.controller.enclosure;
+package net.zoofantastique.controller.enclosure.composition;
 
+import net.zoofantastique.controller.enclosure.behavior.Cleanness;
 import net.zoofantastique.controller.entity.creature.composition.Creature;
 import net.zoofantastique.controller.consumable.composition.Food;
 
 import java.util.ArrayList;
-import java.util.Arrays;
-import java.util.Objects;
+import java.util.List;
 
 import static net.zoofantastique.controller.entity.creature.behavior.Hunger.SATISFIED;
 
@@ -13,7 +13,7 @@ import static net.zoofantastique.controller.entity.creature.behavior.Hunger.SATI
  * Classe Enclosure représentant un enclos dans un zoo.
  * Un enclos a un type, un nom, une surface, un nombre maximum de créatures, un nombre actuel de créatures, une liste de créatures et un niveau de propreté.
  */
-public class Enclosure<T> {
+public class Enclosure<T extends Creature> {
     // Le type de l'enclos est déterminé par le nom de la classe qui l'étend
     private final String enclosureType = getClass().getSimpleName();
     // Le nom de l'enclos
@@ -25,7 +25,7 @@ public class Enclosure<T> {
     // Le nombre actuel de créatures dans l'enclos
     private int nbCreature;
     // La liste des créatures actuellement dans l'enclos
-    private ArrayList<T> listCreature = new ArrayList<>();
+    private List<T> listCreature;
     // Le niveau de propreté de l'enclos
     private Cleanness cleanness;
 
@@ -41,46 +41,44 @@ public class Enclosure<T> {
         this.name = name;
         this.surface = surface;
         this.max = max;
-        this.listCreature = new ArrayList<>(0);
+        this.listCreature = new ArrayList<T>();
         this.nbCreature = 0;
         this.cleanness = Cleanness.CORRECT;
     }
 
     /**
-     * Constructeur de la classe Enclosure avec nom, surface, nombre maximum de créatures et liste de créatures.
-     * Initialise également le nombre de créatures à 0 et la propreté à CORRECT.
+     * Cette méthode est utilisée pour ajouter des créatures à l'enclos.
+     * Elle accepte un tableau de créatures et vérifie si l'enclos a la capacité d'accueillir toutes les créatures.
+     * Si l'enclos a la capacité, toutes les créatures sont ajoutées à l'enclos et le nombre actuel de créatures est mis à jour.
+     * Si l'enclos n'a pas la capacité, un message d'erreur est affiché.
      *
-     * @param name          le nom de l'enclos.
-     * @param surface       la surface de l'enclos en mètres carrés.
-     * @param max           le nombre maximum de créatures que l'enclos peut contenir.
-     * @param listCreature  la liste des créatures à ajouter à l'enclos lors de la création.
-     */
-
-    /**
-     * Méthode pour ajouter des créatures à l'enclos.
-     * Si le nombre total de créatures après l'ajout ne dépasse pas le maximum autorisé, les créatures sont ajoutées à l'enclos.
-     * Sinon, un message d'erreur est affiché.
-     *
-     * @param creatures Les créatures à ajouter à l'enclos.
+     * @param creatures Un tableau de créatures à ajouter à l'enclos.
      */
     public void addCreature(T... creatures) {
         int totalCreatures = nbCreature + creatures.length;
         if (totalCreatures <= max) {
-            this.listCreature.addAll(Arrays.asList(creatures));
+            this.listCreature.addAll(List.of(creatures));
             nbCreature += creatures.length;
         } else {
             System.err.println("Pas assez de places disponibles!");
         }
     }
 
-    // TODO
+    /**
+     * Cette méthode est utilisée pour retirer des créatures de l'enclos.
+     * Elle accepte un tableau de créatures à retirer et vérifie si chaque créature est présente dans l'enclos.
+     * Si la créature est présente dans l'enclos, elle est retirée.
+     * Si la créature n'est pas présente dans l'enclos, un message d'erreur est affiché.
+     *
+     * @param creaturesToRemove Un tableau de créatures à retirer de l'enclos.
+     */
     public void removeCreature(T... creaturesToRemove) {
         for (T creature : creaturesToRemove) {
             if (listCreature.contains(creature)) {
                 listCreature.remove(creature);
                 nbCreature--;
             } else {
-                System.err.println("La créature:\n" + creature + "\nn'est pas dans l'enclos!");
+                System.err.println("La créature:\n\n" + creature + "\nn'est pas dans l'enclos!");
             }
         }
     }
@@ -90,13 +88,15 @@ public class Enclosure<T> {
      * Si la créature est présente dans l'enclos et qu'elle n'est pas rassasiée, elle mange la nourriture fournie.
      * Si la créature n'est pas présente dans l'enclos, un message d'erreur est affiché.
      *
-     * @param food La nourriture à donner à la créature.
+     * @param food     La nourriture à donner à la créature.
      * @param creature La créature à nourrir.
      */
-    public void feedCreature(Food food, Creature creature){
+    public void feedCreature(Food food, T creature) {
         if (listCreature.contains(creature)) {
             if (!creature.getHungerState().equals(SATISFIED.getState())) {
                 creature.eat(food);
+            } else {
+                System.err.println("La créature:\n" + creature + "\nn'a pas faim!");
             }
         } else {
             System.err.println("La créature:\n" + creature + "\nn'est pas dans l'enclos!");
@@ -114,8 +114,16 @@ public class Enclosure<T> {
             return;
         }
         System.out.println(getClass().getSimpleName() + " : " + getName() + " est en maintenance.");
-        getCleanness().clean();
+        setCleanness(getCleanness().clean());
         System.out.println(getClass().getSimpleName() + " : " + getName() + " est maintenant " + getCleanness().getValue() + ".");
+    }
+
+    public String showCreatures() {
+        StringBuilder sb = new StringBuilder();
+        for (T creature : listCreature) {
+            sb.append(creature);
+        }
+        return sb.toString();
     }
 
     // Getter et setter
@@ -123,6 +131,7 @@ public class Enclosure<T> {
     public String getName() {
         return name;
     }
+
     public void setName(String name) {
         this.name = name;
     }
@@ -130,6 +139,7 @@ public class Enclosure<T> {
     public double getSurface() {
         return surface;
     }
+
     public void setSurface(double surface) {
         this.surface = surface;
     }
@@ -137,6 +147,7 @@ public class Enclosure<T> {
     public int getMax() {
         return max;
     }
+
     public void setMax(int max) {
         this.max = max;
     }
@@ -144,13 +155,15 @@ public class Enclosure<T> {
     public int getNbCreature() {
         return nbCreature;
     }
+
     public void setNbCreature(int nbCreature) {
         this.nbCreature = nbCreature;
     }
 
-    public ArrayList<T> getListCreature() {
+    public List<T> getListCreature() {
         return listCreature;
     }
+
     public void setListCreature(ArrayList<T> listCreature) {
         this.listCreature = listCreature;
     }
@@ -158,28 +171,39 @@ public class Enclosure<T> {
     public Cleanness getCleanness() {
         return cleanness;
     }
+
     public void setCleanness(Cleanness cleanness) {
         this.cleanness = cleanness;
     }
 
-    /**
-     * Méthode pour obtenir une représentation sous forme de chaîne de caractères de l'enclos.
-     * Construit une chaîne de caractères contenant le type d'enclos, le nom, la surface, le nombre maximum de créatures, le nombre actuel de créatures, le niveau de propreté et la liste des créatures.
-     *
-     * @return Une chaîne de caractères représentant l'enclos.
-     */
+    public String getEnclosureType() {
+        return enclosureType;
+    }
+
+    // TODO doc
+    @Override
     public String toString() {
         StringBuilder sb = new StringBuilder("<-/ " + enclosureType + " \\->\n");
-        sb.append("-------------------------")
-                .append("\nNom: ").append(name)
-                .append("\nSuperficie: ").append(getSurface()).append("m²")
-                .append("\nMax creatures: ").append(getMax())
-                .append("\nNb creatures: ").append(getNbCreature())
-                .append(" / ").append(getMax())
-                .append("\nPropreté: ").append(getCleanness().getValue()).append("\n");
-        for (T creature : listCreature) {
-            sb.append("\n").append(creature.toString());
+        if (listCreature.isEmpty()) {
+            sb.append("-------------------------")
+                    .append("\nNom: ").append(name)
+                    .append("\nSuperficie: ").append(getSurface()).append("m²")
+                    .append("\nMax creatures: ").append(getMax())
+                    .append("\nNb creatures: ").append(getNbCreature())
+                    .append(" / ").append(getMax())
+                    .append("\nPropreté: ").append(getCleanness().getValue()).append("\n");
+            return sb.toString();
+        } else {
+            sb.append("-------------------------")
+                    .append("\nNom: ").append(name)
+                    .append("\nSuperficie: ").append(getSurface()).append("m²")
+                    .append("\nMax creatures: ").append(getMax())
+                    .append("\nNb creatures: ").append(getNbCreature())
+                    .append(" / ").append(getMax())
+                    .append("\nPropreté: ").append(getCleanness().getValue())
+                    .append("\n\nListes des créatures:\n\n")
+                    .append(showCreatures());
+            return sb.toString();
         }
-        return sb.toString();
     }
 }
